--- a/pages/Mc01.md
+++ b/pages/Mc01.md
@@ -3,83 +3,67 @@ layout: page
 title: Mc01
 ---
 
-[<<]] [[/Mt28|<]] [[/Mc02|>](/Mt01 "wikilink") [&gt;&gt;](/Lc01 "wikilink")
+ [[Mc02|>](Mc02)
 
 ### Introduzione
 
 1 Inizia qui la presentazione [1] di [Gesù](/g/Gesù "wikilink") [Cristo](/Cristo "wikilink") [Figlio di Dio](/Figlio_di_Dio "wikilink").
 
-2 Citando il libro del profeta Isaia: «Guarda, io ti faccio precedere dal mio portavoce e apripista. 3 Voce di uno che grida nel deserto: "Sistemate la strada del Padrone[2], raddrizzate i suoi sentieri"».
+2-3 Il libro del profeta Isaia dice: *Guarda, io ti faccio precedere dal mio portavoce e apripista. Voce di uno che grida nel deserto: "Sistemate la strada del [Padrone](/g/Signore "wikilink"), raddrizzate i suoi sentieri".*[2]
 
-4 Arrivò nel deserto Giovanni "il battezzatore", annunciando un lavaggio[3] di pentimento per il perdono degli errori[4]. 5 E tutti gli abitanti della Giudea[5] e di Gerusalemme correvano da lui e si facevano lavare nel fiume Giordano, confessando le loro mancanze.
+4-5 Arrivò nel deserto Giovanni "il Battezzatore", annunciando un lavaggio[3] di pentimento per il perdono degli errori[4]. Tutti gli abitanti della Giudea[5] e di Gerusalemme correvano da lui e si facevano lavare nel fiume Giordano, confessando le loro mancanze.
 
-6 Giovanni indossava un vestito di pelo di cammello con una cintura di cuoio, mangiava cavallette e miele selvatico. 7 Predicava dicendo: «Dopo di me viene uno che è più potente di me; non sono degno nemmeno di togliergli i sandali. 8 Io vi ho lavato con acqua, ma lui vi immergerà in Essenza Divina[6]».
+6-8 Giovanni indossava un vestito di pelo di cammello con una cintura di cuoio, mangiava cavallette e miele selvatico. Predicava dicendo: «Dopo di me viene uno che è più potente di me; non sono nemmeno degno di togliergli i sandali. Io vi ho immerso in acqua, ma lui vi immergerà in Spirito di Dio[6]».
 
-### Arriva Gesù
+9-11 Proprio in quel periodo arrivò Gesù da [Nazaret](/Nazaret "wikilink") di [Galilea](/Galilea "wikilink"), e fu lavato[7] nel fiume Giordano da Giovanni. Mentre Gesù usciva dall'acqua, vide il cielo che si apriva e Spirito di Dio che scendeva su di lui in forma di colomba. Una voce dall'alto disse: "Tu sei il figlio che porto nel cuore, e sono molto fiero di te".
 
-9 Proprio in quel periodo arrivò Gesù da Nazaret di Galilea, e fu immerso[7] nel fiume Giordano da Giovanni . 10 Mentre Gesù usciva dall'acqua, vide aprirsi il cielo e Spirito di Dio, sotto forma di colomba, scendere su di lui. 11 Una voce dal cielo disse: "Tu sei il figlio che ho nel cuore, di cui vado molto fiero".
+12-13 Subito dopo, Spirito di Dio portò Gesù nel deserto, dove rimase per quaranta giorni e dove fu tentato dall'Angelo Bugiardo[8] . Rimase là con le bestie selvatiche, e gli angeli [9] lo servivano.
 
-12 Subito dopo, Spirito di Dio portò Gesù nel deserto, 13 dove rimase per quaranta giorni e dove fu tentato dall'Angelo Bugiardo[8] . Rimase là con le bestie selvatiche, e gli angeli [9] lo servivano.
+### Gesù predica e convoca i primi seguaci
 
-14 In seguito, dopo l'arresto di Giovanni, Gesù si trasferì in Galilea a predicare il messaggio della salvezza di Dio.
+14-15 In seguito, dopo l'arresto di Giovanni, Gesù si trasferì in Galilea per predicare il messaggio della salvezza di Dio. Gesù diceva a tutti: "È arrivato il momento: il governo di Dio è vicino! Pentitevi dei vostri errori e fate vostro questo messaggio!"
 
-15 Gesù diceva a tutti: "E´ arrivato il momento: il regno di Dio è vicino! Pentitevi dei vostri errori e credete in questo messaggio!"
+16-18 Un giorno, mentre Gesù passeggiava lungo la riva del lago di Galilea, vide due pescatori, Simone e suo fratello Andrea, che buttavano le reti. Gesù li chiamò: "Venite, seguitemi e vi farò diventare pescatori di uomini!" Immediatamente i due lasciarono le reti e andarono con lui.
 
-### Pescatori di uomini
-
-16 Un giorno, mentre Gesù passeggiava lungo la riva del lago di Galilea, vide due pescatori, Simone e suo fratello Andrea, che buttavano le reti.
-
-17 Gesù li chiamò: "Venite, seguitemi e vi farò diventare pescatori di uomini!"
-
-18 Immediatamente i due lasciarono le reti e andarono con lui.
-
-19 Poco più avanti, Gesù vide Giacomo e Giovanni, figli di Zebedeo, che riparavano le reti nella barca. Gesù li chiamò e loro lo seguirono, abbandonando il padre con i suoi dipendenti.
-
-21 Gesù e i suoi compagni arrivarono alla città di Cafarnao, e, un sabato mattina, entrarono nella sinagoga[10], dove Gesù si mise a spiegare. 22 I presenti rimanevano stupiti dalle sue parole, perchè insegnava con autorevolezza, diversamente dai professori dell'epoca.
+19-20 Poco più avanti, Gesù vide Giacomo e Giovanni, figli di Zebedeo, che riparavano le reti nella barca. Gesù li chiamò e loro lo seguirono, abbandonando il padre con i suoi dipendenti.
 
 ### Liberazioni di Gesù
 
-23 Tra gli ascoltatori c'era un uomo in preda ad uno spirito del male[11], che si mise ad urlare: 24 "Che vuoi da noi, Gesù di Nazaret? Sei venuto per distruggerci? Io so che tu sei il Consacrato di Dio.
+21-22 Gesù e i suoi compagni arrivarono alla città di Cafarnao, e, un sabato mattina, entrarono nella sinagoga[10], dove Gesù si mise a insegnare. I presenti rimanevano stupiti dalle sue parole, perchè insegnava con autorevolezza, diversamente dai professori dell'epoca.
 
-25 Ma Gesù lo sgridò dicendo: "Stai zitto ed esci da quest'uomo!" 26 A queste parole lo spirito del male, scuotendo violentemente la vittima e gridando forte, lasciò l'uomo. Tutti rimasero stupiti e cominciarono a discutere dell'accaduto. "Che maniera è questa di fare religione?" si chiedevano tra di loro. "Guardate come parla con autorità: perfino gli spiriti del male ubbidiscono ai suoi ordini!".
+23-24 Tra gli ascoltatori c'era un signore in preda ad uno spirito del male[11], che si mise ad urlare: "Che vuoi da noi, Gesù di Nazaret? Sei venuto per distruggerci? Io so che tu sei il Consacrato a Dio.
+
+25-26 Ma Gesù lo sgridò dicendo: "Stai zitto! Esci da questo signore!" A queste parole lo spirito del male, scuotendo violentemente la vittima e gridando forte, lasciò l'uomo. Tutti rimasero stupiti e cominciarono a discutere dell'accaduto. "Cos'è? Una nuova religione?" si chiedevano. "Guardate come parla con autorità: perfino gli spiriti del male ubbidiscono ai suoi ordini!".
 
 28 La notizia di quello che Gesù aveva fatto si sparse velocemente per tutta la regione.
 
-29 Poi uscirono dalla sinagoga e andarono con Giacomo e Giovanni a casa di Simone e Andrea, dove trovarono la suocera di Simone a letto con la febbre alta. Lo riferirono subito a Gesù, che le si avvicinò e le prese la mano per aiutarla ad alzarsi. Subito la febbre sparì, e lei si alzò per servirli.
+29 Poi uscirono dalla sinagoga e andarono con Giacomo e Giovanni a casa di Simone e Andrea, dove trovarono la suocera di Simone a letto con la febbre alta. Lo riferirono subito a Gesù, che si avvicinò a lei e le prese la mano per aiutarla ad alzarsi. Subito la febbre sparì, e lei si alzò per servirli.
 
-32 Dopo il tramonto, portarono a Gesù molti malati e indemoniati. 33 Intanto, tutta la città di Cafàrnao si era riunita alla porta, e quella sera Gesù guarì un gran numero di persone e ordinò a molti demoni di uscire dai corpi delle loro vittime, vietando agli spiriti di parlare, visto che sapevano chi fosse realmente.
+32-33 Dopo il tramonto, portarono a Gesù molti malati e posseduti. Intanto, tutta Cafàrnao si era riunita alla porta, e quella sera Gesù guarì un gran numero di persone e ordinò a molti demòni di uscire dai corpi delle loro vittime, vietando agli spiriti di parlare, visto che sapevano chi fosse realmente.
 
-35 Il giorno dopo, Gesù si alzò molto prima dell'alba e ando in un posto solitario per pregare.
+35-37 Il giorno dopo, Gesù si alzò molto prima dell'alba e andò in un posto solitario per pregare. Più tardi, Simone e gli altri lo cercavano e quando lo trovarono gli dissero: "Tutti ti cercano!"
 
-36 Più tardi, Simone e gli altri andarono a cercarlo e quando lo trovarono gli dissero: 37 "Tutti ti cercano!"
+38-39 Ma Gesù rispose: "Dobbiamo proseguire verso le altre città e portare anche lì il mio messaggio, perché questa è la mia missione". Così Gesù girò tutta la provincia della Galilea, predicando nelle sinagoghe e liberando molte persone dalla forza degli spiriti del male.
 
-38 Ma Gesù rispose: "Dobbiamo proseguire verso le altre città e portare anche a loro il mio messaggio, perché questa è la ragione per cui sono venuto".
+### Guarigione di un lebbroso
 
-39 Così Gesù girò tutta la provincia della Galilea, predicando nelle sinagoghe e liberando molte persone dalla forza degli spiriti del male.
+40-42 Una volta gli si avvicinò un lebbroso che, inginocchiato davanti a lui, cominciò a pregarlo: "Se vuoi, tu puoi guarirmi!" Gesù ebbe pietà di lui, lo toccò e disse: "Sì lo voglio: guarisci!" Immediatamente la lebbra sparì, e fu guarito.
 
-40 Una volta gli si avvicinò un lebbroso che s'inginocchiò davanti a lui e cominciò a pregarlo: "Se vuoi, tu puoi guarirmi!" 41 Gesù ebbe pietà di lui, lo toccò e disse: "Si lo voglio: guarisci!" 42 Immediatamente la lebbra sparì, e fu guarito.
-
-43 Gesù lo mandò via, e gli raccomandò: "Vai subito a farti controllare dal sacerdote, ma non rivelare a nessuno quello che ti è successo. Poi, fai l'offerta secondo le regole di Mosé per la guarigione dalla lebbra, per far sapere a tutti che sei guarito."
+43-44 Gesù lo mandò via, e gli raccomandò: "Vai subito a farti controllare dal sacerdote, ma non raccontare niente a nessuno. Poi, fai l'offerta secondo le regole di Mosé per la guarigione dalla lebbra, per far sapere a tutti che sei guarito."
 
 45 Appena partito, però, quel signore cominciò a urlare a tutti la notizia della sua guarigione, col risultato che ben presto Gesù fu circondato da una folla tale che non poteva più entrare liberamente in nessuna città; doveva starsene fuori, negli spazi aperti dove andava a trovarlo gente da tutte le parti.
 
-[<<]][[/Mt28|<]] [[/Mc02|>](/Mt01 "wikilink") [&gt;&gt;](/Lc01 "wikilink")
+ [[Mc02|>](Mc02)
 
 Note
 ----
 
 <references>
 </references>
-Altre versioni
---------------
-
-[/BLM](/{{BASEPAGENAME}}/BLM "wikilink") [/CEI](/{{BASEPAGENAME}}/CEI "wikilink") [/ND](/{{BASEPAGENAME}}/ND "wikilink") [/NR](/{{BASEPAGENAME}}/NR "wikilink") [/RIV](/{{BASEPAGENAME}}/RIV "wikilink") [/TILC](/{{BASEPAGENAME}}/TILC "wikilink")
-
-[Category: Marco](/Category:_Marco "wikilink")
 
 [1] [vangelo](/g/vangelo "wikilink")
 
-[2] [Signore](/g/Signore "wikilink")
+[2] la seconda parte si trova in Is 40:3, ma la prima parte non ha un corrispondente in Isaia, semmai in Esodo 23:20 e Mal. 3:1
 
 [3] [battesimo](/g/battesimo "wikilink")
 
