--- a/pages/Mc02.md
+++ b/pages/Mc02.md
@@ -3,63 +3,55 @@ layout: page
 title: Mc02
 ---
 
-[<<]][[/Mc01|<]] [[/Mc03|>](/Mc01 "wikilink") [&gt;&gt;](/Lc01 "wikilink")
+[[Mc01|<]] (Mc01) [[Mc03|>](Mc03)
 
 Guarire e perdonare
 -------------------
 
-1 Alcuni giorni dopo, Gesù tornò a Cafàrnao, e si sparse la voce che era a casa di uno. 2 Rapidamente, arrivarono così in tanti, che non c'era più posto per nessuno, nemmeno fuori dalla porta. Gesù presentava il messaggio di Dio. Arrivarono anche quattro signori portando un disabile. Non potendosi fare largo tra la folla, cercarono di raggiungere Gesù facendo un buco nel tetto proprio sopra la sua testa, e calando l'amico paralizzato sulla barella.
+1-4 Alcuni giorni dopo, Gesù tornò a Cafàrnao, e si sparse la voce che era a casa di uno. Rapidamente, arrivò una tale folla che non c'era più posto per nessuno, nemmeno fuori dalla porta. Gesù presentava il messaggio di Dio. Arrivarono anche quattro signori portando un disabile. Non riuscendo a farsi largo tra la folla, cercarono di raggiungere Gesù facendo un buco nel tetto proprio sopra la sua testa, e calando l'amico paralizzato sulla barella.
 
-5 Gesù vedendo la loro fiducia, disse al malato "Caro, i tuoi fallimenti sono stati perdonati." 6 Alcuni capi religiosi del posto, seduti lì a guardare, pensarono "Come è possibile? E' una bestemmia: solo Dio può perdonare gli errori"
+5 Gesù vedendo la loro fiducia, disse al malato "Caro, i tuoi fallimenti sono stati perdonati."
 
-8 Allora Gesù, che li leggeva nel pensiero, disse "Perché fate questi ragionamenti? E' più difficile perdonare le sue mancanze o guarirlo?
+6-7 Alcuni capi religiosi del posto, seduti lì a guardare, pensarono "Come è possibile? È una bestemmia: solo Dio può perdonare gli errori"
 
-10 Perciò, per dimostrarvi che io, l'inviato di Dio, sono autorizzato a perdonare le mancanze ... ", si girò verso il paralizzato e ordinò: "alzati, raccogli la tua barella e torna a casa tua!".
+8-11 Allora Gesù, che li leggeva nel pensiero, disse: "Perché fate questi ragionamenti? È più difficile perdonare le sue mancanze o guarirlo? Perciò, per dimostrarvi che io, l'inviato di Dio, sono autorizzato a perdonare gli errori ... ", si girò verso il paralizzato e ordinò: "alzati, raccogli la tua barella e torna a casa tua!".
 
-12 Quel signore saltò in piedi, raccolse la barella e si fece largo tra gli ascoltatori. Tutti rimasero a bocca aperta: "Mai vista una cosa del genere!" esclamavano, e davano il merito a Dio.
+12 Quel signore saltò in piedi, raccolse la barella e si fece largo tra i presenti. Tutti rimasero a bocca aperta: "Mai vista una cosa del genere!" esclamavano, e davano il merito a Dio.
 
 Levi e la gentaglia
 -------------------
 
-13 Poi Gesù tornò sulla riva del lago, e lì si mise a insegnare alla folla che gli si raccoglieva intorno.
-
-14 Mentre passava, vide Levi, figlio di Alfeo, seduto alla sua scrivania, raccogliendo tasse[1]. "Vieni con me", gli disse, e Levi si alzò e se ne andò con lui.
+13-14 Poi Gesù tornò sulla riva del lago, e lì si mise a insegnare alla folla che gli si raccoglieva intorno. Mentre passava, vide Levi, figlio di Alfeo, seduto alla sua scrivania, raccogliendo tasse [1]. "Vieni con me", gli disse, e Levi si alzò e se ne andò con lui.
 
 15 Quella sera, Gesù e i suoi allievi stretti mangiarono a casa di Levi, insieme a molti esattori e numerosi altri che pur disprezzando la religione [2], lo seguivano.
 
-16 Quando alcuni capi religiosi videro Gesù a tavola con esattori e bestemmiatori, chiesero ai suoi amici: "Come mai mangia e beve con quella gentaglia?"
-
-17 Gesù sentì le loro parole e intervenne: "Sono i malati che hanno bisogno del medico, e non i sani! Io non sono venuto per quelli che seguono le regole, ma per quelli che sbagliano."
+16-17 Quando alcuni capi religiosi videro Gesù a tavola con esattori e bestemmiatori, chiesero ai suoi amici: "Come mai mangia e beve con quella gentaglia?" Gesù sentì le loro parole e intervenne: "Sono i malati che hanno bisogno del medico, e non i sani! Io non sono venuto per quelli che rispettano le regole, ma per quelli che sbagliano."
 
 Vecchio e nuovo
 ---------------
 
 18 I seguaci di Giovanni "Il battezzatore" e i seguaci dei Farisei praticavano il digiuno. Alcuni chiesero a Gesù: "Perché i seguaci di Giovanni e dei Farisei praticano il digiuno e i tuoi no?"
 
-19-20 "Quando c'è un matrimonio gli invitati digiunano? Fin quando sono con lo sposo, mangiano e bevono. Ma verrà il momento in cui gli sarà tolto lo sposo, e allora digiuneranno.
+19-20 "Quando c'è un matrimonio gli invitati digiunano? Fin quando stanno con lo sposo, mangiano e bevono. Ma verrà il momento in cui lo sposo gli sarà tolto, e allora digiuneranno.
 
-21 Nessuno mette della stoffa nuova per rattoppare un vestito vecchio, perché la stoffa nuova si restringe e strapperà il vecchio, e il danno sarà peggiore. 22 E neanche si mette il vino novello in bottiglie vecchie, che esplode e fa perdere vino e bottiglia. Il vino nuovo va in bottiglie nuove.
+21-22 Nessuno mette della stoffa nuova per rattoppare un vestito vecchio, perché la stoffa nuova si restringe e strapperà il vecchio, e il danno sarà peggiore. E neanche si mette il vino novello in bottiglie vecchie, che esplode e fa perdere vino e bottiglia. Il vino nuovo va in bottiglie nuove.
 
 Il padrone del giorno di riposo
 -------------------------------
 
-23 Un'altra volta, di sabato[3], mentre Gesù e i suoi seguaci attraversavano i campi, alcuni di loro raccolsero delle spighe \[per mangiare il grano strada facendo\] 24 Subito alcuni capi degli ebrei incominciarono a protestare con Gesù: "Non si fanno queste cose di sabato: è contro le regole di Mosé!"
+23-24 Un'altra volta, di sabato [3], mentre Gesù e i suoi seguaci attraversavano i campi, alcuni di loro raccolsero delle spighe \[per mangiare il grano strada facendo\] Subito alcuni capi degli ebrei incominciarono a protestare con Gesù: "Non si fanno queste cose di sabato: è contro le regole di Mosé!"
 
-25 Gesù rispose: "Avete mai letto nella Bibbia cosa fece il re Davide, quando lui e i suoi compagni erano affamati? 26 Davide entrò nel tempio di Dio (ai tempi del sommo sacerdote Abiatar), e con la sua compagnia mangiò il pane speciale riservato ai sacerdoti." 27 Poi aggiunse: "Il giorno di riposo[4] è stato fatto per l'uomo, e non l'uomo per il giorno di riposo!". 28 Sappiate che io, l'Inviato di Dio [5], sono padrone anche del giorno di riposo."
+25-26 Gesù rispose: "Avete mai letto nella Bibbia cosa fece il Re Davide, quando lui e i suoi compagni erano affamati? Davide entrò nel Tempio di Dio (ai tempi del Sacerdote Capo Abiatar), e con la sua compagnia mangiò il pane speciale riservato ai sacerdoti."
 
-[<<]][[/Mc01|<]] [[/Mc03|>](/Mc01 "wikilink") [&gt;&gt;](/Lc01 "wikilink")
+27-28 Poi aggiunse: "Il giorno di riposo[4] è stato fatto per l'uomo, e non l'uomo per il giorno di riposo!". Sappiate che io, il Protagonista [5], sono padrone anche del giorno di riposo."
+
+[[Mc01|<]] (Mc01) [[Mc03|>](Mc03)
 
 Note
 ----
 
 <references>
 </references>
-Altre versioni
---------------
-
-[/BLM](/{{BASEPAGENAME}}/BLM "wikilink") [/CEI](/{{BASEPAGENAME}}/CEI "wikilink") [/ND](/{{BASEPAGENAME}}/ND "wikilink") [/NR](/{{BASEPAGENAME}}/NR "wikilink") [/RIV](/{{BASEPAGENAME}}/RIV "wikilink") [/TILC](/{{BASEPAGENAME}}/TILC "wikilink")
-
-[Category: Marco](/Category:_Marco "wikilink")
 
 [1] gli esattori erano molto mal visti, perché toglievano soldi ai loro compaesani per darli all'occupatore (i romani) e spesso se ne approfittavano
 
