--- a/pages/Mc07.md
+++ b/pages/Mc07.md
@@ -3,57 +3,91 @@ layout: page
 title: Mc07
 ---
 
-[<<]][[/Mc06|<]] [[/Mc08|>](/Mc01 "wikilink") [&gt;&gt;](/Lc01 "wikilink")
-
 Fate quello che è giusto
 ------------------------
 
-1 Un giorno i Farisei e alcuni professori della Bibbia, arrivati da Gerusalemme, si radunarono attorno a Gesù.
+1-2 Un giorno i Farisei e alcuni professori della Bibbia, arrivati da
+Gerusalemme, si radunarono attorno a Gesù. Si accorsero che alcuni dei
+suoi seguaci mangiavano senza rispettare la tradizione del lavaggio
+rituale delle mani.
 
-2 Si accorsero che alcuni dei suoi seguaci non rispettavano la tradizione dei lavaggi rituali delle mani prima di mangiare. 3 In genere gli Ebrei, e in particolare i Farisei, seguendo le loro antiche tradizioni, non mangiavano se prima non si erano lavati le mani.
+3-4 In genere, gli Ebrei, e in particolar modo i Farisei, seguendo le
+loro antiche tradizioni, non mangiavano se prima non si erano lavati le
+mani. Allo stesso modo, quando tornavano dal mercato, non mangiavano
+senza prima aver prima compiuto la purificazione rituale. Hanno anche
+molte altre tradizioni, come, ad esempio il rito del lavaggio dei
+bicchieri, delle pentole e degli utensili da cucina.
 
-4 Allo stesso modo, quando tornavano dal mercato, non mangiavano senza prima aver prima compiuto la purificazione rituale. Questa è una delle regole e tradizioni che rispettano, come, ad esempio la cerimonia del lavaggio dei bicchieri, delle pentole e degli utensili da cucina.
+5 Per questo i capi religiosi gli chiesero “Perché i tuoi seguaci non
+rispettano le nostre antiche usanze? Perché mangiano senza prima lavarsi
+le mani?”
 
-5 Per questo i capi religiosi gli chiesero "Perché i tuoi seguaci non seguono le nostre antiche usanze? Perché mangiano senza prima lavarsi le mani?"
+6-8 Gesù rispose: “Ipocriti! Isaia, il messaggero di Dio, parlava di voi
+quando diceva:”Questa gente mi onora a parole, ma non mi porta nel
+cuore. Il modo con cui mi onorano è una farsa, perché insegnano dottrine
+fatte da uomini“. Infatti voi abbandonate le regole di Dio e le
+sostituite con le vostre tradizioni.”
 
-6 Gesù rispose: "Ipocriti! Isaia profetizzò bene di voi, quando disse: "Questa gente mi onora a parole, ma non ha un briciolo di amore per me. 7 Il modo con cui mi onorano è una farsa, perché le dottrine che insegnano sono fatte da uomini". 8 Infatti voi abbandonate le regole di Dio e le sostituite con le vostre tradizioni."
+9-13 “Come siete bravi a mettere da parte il regolamento di Dio per
+seguire il vostro! Per esempio, Mosè vi diede queste regole:”Onora tuo
+padre e tua madre“[^3] e”Chi disconosce suo padre o sua madre, deve
+morire!“[^4] Voi approvate invece che una persona si disinteressi dei
+propri genitori, purché gli dica:”Mi spiace, non posso aiutarvi, perché
+ho offerto a Dio quello che potevo dare a voi." Così annullate le regole
+di Dio per seguire la vostra tradizione. E questo è solo un esempio, ma
+ce ne sono molti altri!"
 
-9 "Come siete bravi a mettere da parte il regolamento di Dio per seguire il vostro! Per esempio, Mosè vi diede queste regole: "Onora tuo padre e tua madre" e "Chi disconosce suo padre o sua madre, deve morire!" 11 Voi approvate invece che un uomo si disinteressi dei propri genitori, quando dice a loro: "Mi spiace, non posso aiutarvi, perché ho offerto a Dio quello che potevo dare a voi" 12,13 Voi li autorizzate a non aiutare padre e madre, annullando così le regole di Dio, per seguire la vostra tradizione. E questo è solo un esempio, ma ce ne sono molti altri!".
+14-16 Poi Gesù invitò la folla ad avvicinarsi, e disse: “Gente!
+Ascoltatemi e cercate di capire! Voi non vi contaminate con quello che
+vi entra dentro, ma con quello che tirate fuori! Pensateci bene!”
 
-14,15 Poi Gesù invitò la folla ad avvicinarsi, e disse: "Gente! Ascoltatemi e cercate di capire! Voi non vi contaminate con quello che mangiate, ma da quello che pensate e dite! 16 Pensateci bene!"
+17-19 Quando lasciò la folla ed entrò in casa, i suoi seguaci gli
+chiesero maggiori spiegazioni. Gesù rispose: “Non lo capite neanche voi?
+Non capite che quello che mangiate non può contaminarvi? Il cibo non
+entra nel vostro cuore: passa dallo stomaco e finisce nella fogna.”
+(Gesù voleva dire che era permesso mangiare qualunque cibo)[^5].
 
-17 Lascio la folla ed entrò in casa di uno, e i seguaci gli chiesero maggiori spiegazioni. Gesù spiegò: "Non lo capite neanche voi? Non capite che quello che mangiate non può contaminarvi? Il cibo non entra nel vostro cuore, passa solo dal vostro stomaco per poi finire nella fogna." Dicendo questo, Gesù dichiarava che era permesso mangiare tutti i cibi.
-
-20 Poi aggiunse: "E' quello che esce dalle persone, che le contamina. 21-23 Perché è dall'interno, dal cuore della persona, che partono i pensieri cattivi, gli sbagli sessuali, i furti, gli omicidi, il tradimento, l'insoddisfazione, la cattiveria, l'inganno, l'immoralità, l'invidia, la maldicenza, la superbia e tutte le altre follie. Sono tutte queste cose meschine che, uscendo dalla persona, la contaminano e la rendono impura!".
+20-23 Poi aggiunse: “È quello che esce dalle persone che le contamina.
+Perché è dall’interno, dal cuore dell’individuo, che partono i pensieri
+cattivi, gli abusi sessuali, i furti, gli omicidi, il tradimento,
+l’insoddisfazione, la cattiveria, l’inganno, l’immoralità, l’invidia, la
+maldicenza, la superbia e tutte le follie. Sono tutte queste cattiverie
+che, uscendo dalla persona, la contaminano e la rendono impura!”.
 
 Gesù e la fiducia della donna straniera
 ---------------------------------------
 
-24 Gesù partì dalla Galilea per dirigersi verso la zona di Tiro e Sidone e, giunto a destinazione, entrò in una casa. Cercò di non farlo sapere a nessuno, ma non riuscì a passare inosservato.
+24 Gesù partì dalla Galilea per dirigersi verso la zona di Tiro e Sidone
+e si fermò in una casa. Cercò di non farlo sapere a nessuno, ma non
+riuscì a passare inosservato.
 
-25-26 Subito, una signora che aveva una figlia posseduta da uno spirito del male e aveva sentito parlare di Gesù gli si avvicinò e si buttò ai suoi piedi, pregandolo di cacciare il demonio da sua figlia. La donna era sirofenicia e non ebrea.
+25-26 Subito, una signora che aveva una figlia posseduta da uno spirito
+del male e aveva sentito parlare di Gesù gli si avvicinò e si buttò ai
+suoi piedi, pregandolo di cacciare il demonio da sua figlia. La donna
+era straniera di origine sirofenicia.
 
-27 Gesù le disse: "Per primi dovrei aiutare quelli della mia famiglia, gli Ebrei. Non sta bene prendere il cibo dei figli per buttarlo ai cagnolini!".
+27-30 Gesù le disse: “Prima vengono i figli: non sta bene prendere il
+cibo dei bambini per buttarlo ai cani!”. Ma la donna rispose: “Signor
+Padrone, ha ragione, ma persino i cagnolini sotto il tavolo mangiano le
+briciole che cadono ai figli.” E Gesù: “Visto che insisti, vai e vedrai
+che lo spirito del male ha lasciato tua figlia”. Quando la signora
+arrivò a casa trovò la bambina sdraiata sul letto e il demonio se n’era
+andato.
 
-28 Ma la donna rispose: "Signor Padrone, ha ragione, ma anche i cagnolini sotto la tavola possono mangiare le briciole che cadono dal piatto dei bambini."
+Il sordomuto
+------------
 
-29 E Gesù: "Visto che l'hai dichiarato, vai e vedrai che lo spirito del male ha lasciato tua figlia".
+31 Dalla zona di Tiro, Gesù passò per la città di Sidone e poi tornò
+verso il lago di Galilea, nella zona delle Dieci Città.
 
-30 Quando la signora arrivò a casa trovò la bambina sdraiata sul letto e tranquilla perché lo spirito se n'era andato.
+32-35 Gli presentarono un sordomuto, implorandogli di poggiare le mani
+su di lui per guarirlo. Gesù lo prese in disparte, lontano dalla folla,
+e gli mise le dita nelle orecchie, poi sputò e gli toccò la lingua.
+Infine, alzando lo sguardo verso il cielo, sospirò e ordinò “Apritevi!”
+Immediatamentente a quel signore gli si sturarono le orecchie e si
+sciolse la lingua.
 
-31 Dalla zona di Tiro, Gesù passò per la città di Sidone e poi tornò verso il lago di Galilea, attraversando la zona delle Dieci Città. 32 Gli presentarono un sordomuto e gli implorarono di poggiare le mani su di lui per guarirlo.
-
-33 Gesù lo prese in disparte e gli mise le dita nelle orecchie, poi sputò e con la saliva gli toccò la lingua. 34 Infine, alzando lo sguardo verso il cielo, sospirò e ordinò "Apritevi!". 35 Immediatamentente quel signore riuscì a udire perfettamente e a parlare con chiarezza.
-
-36 Gesù ordinò ai presenti di non raccontare l'episodio, ma più lo vietava, più ne parlavano.
-
-37 Erano talmente meravigliati per quello che Gesù aveva fatto, che esclamavano: "Fa sempre delle cose incredibili! Addirittura fa sentire i sordi e parlare i muti!"
-
-[<<]][[/Mc06|<]] [[/Mc08|>](/Mc01 "wikilink") [&gt;&gt;](/Lc01 "wikilink")
-
-Note
-----
-
-<references>
-</references>
-[Category: Marco](/Category:_Marco "wikilink")
+36-37 Gesù ordinò ai presenti di non raccontare l’episodio, ma più lo
+vietava, più ne parlavano. Erano talmente meravigliati per quello che
+Gesù aveva fatto, che esclamavano: “Fa sempre delle cose incredibili!
+Addirittura fa sentire i sordi e parlare i muti!”
