--- a/pages/Mc08.md
+++ b/pages/Mc08.md
@@ -3,78 +3,104 @@ layout: page
 title: Mc08
 ---
 
-[<<]][[/Mc07|<]] [[/Mc09|>](/Mc01 "wikilink") [&gt;&gt;](/Lc01 "wikilink")
-
 Cibo per quattromila
 --------------------
 
-1-3 Di nuovo, in quel periodo, si radunò una folla immensa, e ancora una volta la gente rimase senza cibo. Gesù allora chiamò i suoi allievi: "Questa gente mi fa compassione" disse, "è qui da tre giorni e non ha da mangiare. Se li mando a casa a stomaco vuoto si sentiranno male per strada perché c'è chi arriva da lontano."
+1-3 Di nuovo, in quel periodo, si radunò una folla immensa, e ancora una
+volta la gente rimase senza cibo. Gesù allora chiamò i suoi allievi:
+“Sono preoccupato per questa gente” disse, “è qui da tre giorni e non ha
+da mangiare. Se li mando a casa a stomaco vuoto si sentiranno male per
+strada perché arrivano anche da molto lontano.”
 
-4 "E come si fa a trovare cibo per tutti in questo posto sperduto?" chiesero i discepoli.
+4-7 “E come si fa a trovare cibo per tutti in questo posto sperduto?”
+chiesero i discepoli. Gesù domandò: “Quanti pani avete?” “Sette”
+risposero. Gesù ordinò alla folla di sedersi per terra, prese i sette
+pani, ringraziò Dio, li spezzò e li diede ai suoi allievi che li
+distribuirono alla folla. Trovarono anche dei piccoli pesci, e Gesù
+ringrazio Dio anche per quelli, poi ordinò agli allievi di distribuirli.
 
-5 Gesù domandò: "Quanti pani avete?" "Sette" risposero. 6 Gesù ordinò alla folla di sedersi per terra, prese i sette pani, ringraziò Dio, li spezzò e li diede ai suoi allievi che li distribuirono alla folla.
+8-9 Così la folla di circa quattromila persone mangiò fino a saziarsi,
+dopo di che Gesù li rimandò a casa. Alla fine del pasto furono raccolti
+gli avanzi e si riempirono sette grossi cesti.
 
-7 Trovarono anche dei piccoli pesci, e Gesù ringrazio Dio anche per quelli, poi ordinò agli allievi di distribuirli.
+10 Subito dopo, Gesù salì sulla barca con i suoi allievi e andò verso la
+zona di Dalmanùta.
 
-8-9 Così la folla di circa quattromila persone, mangiò fino a saziarsi, dopo di che Gesù li rimandò a casa. Alla fine del pasto furono raccolti gli avanzi e si riempirono sette grossi cesti.
+11-12 Lo seguirono anche alcuni capi Ebrei con l’intento di discutere
+con lui. “Fai apparire un segno miracoloso in cielo” gli dissero,
+“Allora sì che ti crederemo!” Gesù sospirò e disse: “Perché questa gente
+chiede un miracolo?” Io assolutamente non vorrei fare alcun miracolo per
+loro!"
 
-10 Subito dopo, Gesù salì sulla barca con i suoi allievi e andò verso la zona di Dalmanùta.
+13 Poi li lasciò, risalì in barca e se ne andò verso l’altra riva del
+lago.
 
-11 Lo seguirono anche alcuni capi Ebrei con l'intento di discutere con lui. "Fai apparire un segno miracoloso in cielo" gli dissero, "Allora sì che ti crederemo!"
+14 Ma gli allievi avevano dimenticato di fare scorta di pane prima della
+partenza, infatti in barca avevano solo una pagnotta. Mentre
+attraversavano il lago, Gesù, molto seriamente, disse: “State lontani
+dal lievito di Erode e dei Farisei!” I discepoli cominciarono a
+discutere fra di loro: “Dice così perché ci siamo dimenticati di portare
+il pane…”
 
-12 Gesù sospirò e disse: "Perché questa gente chiede un miracolo?" Io assolutamente non vorrei fare alcun miracolo per loro!"
-
-13 Poi li lasciò, risalì in barca e se ne andò verso l'altra riva del lago.
-
-14 Ma gli allievi avevano dimenticato di fare scorta di pane prima della partenza, infatti ne avevano solo un pezzo con loro in barca.
-
-15 Mentre stavano attraversando il lago, Gesù, molto seriamente, gli disse; "State lontani dal lievito di Erode e dei Farisei!" 16 I discepoli cominciarono a discutere fra di loro: "Dice così perché ci siamo dimenticati di portare il pane..."
-
-17 Gesù si accorse di quello che dicevano ed esclamò: "Ma no! Il pane non c'entra! Possibile che non riuscite a capire? Siete così insensibili? 18 Come dice Isaia "I vostri occhi sono fatti per vedere, perché non guardate? Perché non aprite le orecchie per ascoltare? Non ricordate più nulla?" 19 Quando ho sfamato cinquemila persone con cinque pezzi di pane, quante ceste di avanzi avete recuperato?" "Dodici" risposero gli allievi. 20 E quando ho dato da mangiare a quattromila persone con sette pani quanto cibo avanzò?" "Sette ceste" risposero. 21 "E ancora non avete capito?"
+17-21 Gesù si accorse di quello che dicevano ed esclamò: “Ma no! Il pane
+non c’entra! Possibile che non capite? Siete così insensibili? Come dice
+la Bibbia: *Avete occhi, ma non guardate! Avete orecchie, ma non ci
+sentite!* [^6] Avete dimenticato tutto? Quando ho sfamato cinquemila
+persone con cinque pezzi di pane, quante ceste di avanzi avete
+recuperato?” “Dodici” risposero gli allievi. E quando ho dato da
+mangiare a quattromila persone con sette pani quanto cibo avanzò?"
+“Sette ceste” risposero. “E ancora non avete capito?”
 
 Il cieco di Betsaida
 --------------------
 
-22 Arrivati a Betsaida, alcune persone gli portarono un cieco, supplicando Gesù di toccarlo.
+22 Arrivati a Betsaida, alcune persone gli portarono un cieco,
+supplicando Gesù di toccarlo.
 
-23 Gesù prese il cieco per mano e lo condusse fuori dal paese, poi con la saliva gli toccò gli occhi, gli appoggiò le mani sopra e gli chiese: "Riesci a vedere qualcosa?"
+23-26 Gesù prese il cieco per mano e lo condusse fuori dal paese, poi
+con la saliva gli toccò gli occhi, gli appoggiò le mani sopra e gli
+chiese: “Riesci a vedere qualcosa?” Il tipo si guardò intorno. “Sì, vedo
+degli uomini - ma non li vedo bene: mi sembrano alberi che camminano!”.\
+Allora Gesù mise ancora le mani sugli occhi del cieco, che guardò di
+nuovo e scoprì di essere guarito e di vedere tutto chiaramente. Gesù lo
+rimandò direttamente a casa: “Non passare nemmeno dal paese” gli ordinò.
 
-24 Il tipo si guardò intorno. "Sì, vedo degli uomini \[ma non li vedo bene\]: mi sembrano alberi che camminano!".
+Chi è Gesù?
+-----------
 
-25 Allora Gesù mise ancora le mani sugli occhi del cieco, che quando guardò di nuovo era guarito e vedeva tutto chiaramente.
+27-28 Poi, insieme agli allievi, andò verso i paesi della zona di
+Cesarèa di Filippo. Per strada, chiese a loro: “Secondo la gente, chi
+sono io?” “Alcuni pensano che tu sia Giovanni il Battezzatore” risposero
+i discepoli. “Altri dicono che sei Elia o qualche altro profeta
+ritornato in vita”
 
-26 Gesù lo rimandò direttamente a casa: "Non passare nemmeno dal paese" gli ordinò.
+29-30 Poi Gesù chiese: “E secondo voi, chi sono io?” Pietro rispose “Tu
+sei il [Prescelto di Dio](../master/glossario.txt "glossario: Cristo").”
+Allora Gesù ordinò a loro assolutamente di non dirlo a nessuno.
 
-Pietro capisce chi è Gesù
--------------------------
+31-33 Poi cominciò a confidargli che avrebbe sofferto molto, che sarebbe
+stato respinto dal senato dei religiosi, dai capi sacerdoti e dai
+professori di Mosè, che sarebbe stato ucciso e poi, dopo tre giorni,
+resuscitato. Siccome parlava molto apertamente con loro di queste cose,
+Pietro lo prese in disparte e cominciò a rimproverarlo. Allora Gesù si
+girò per guardare gli allievi e disse severamente a Pietro: “Stai
+lontano da me Satana! Tu non capisci le cose di Dio, solo le cose degli
+uomini”.
 
-27 Poi, insieme agli allievi, partì dalla Galilea andando verso i paesi della regione di Cesarèa di Filippo. Per strada, chiese a loro: "Che dice la gente? Chi pensano che io sia?"
+34-35 Poi radunò gli allievi e la folla e cominciò a spiegare: “Chi mi
+vuole seguire deve smettere di pensare a se stesso: prenda la sua croce
+e mi segua. Chi vuole salvare la sua vita la perderà; chi invece la
+sacrifica per me e per amore del mio messaggio la salverà.
 
-28 "Alcuni di loro pensano che tu sia Giovanni il Battezzatore" risposero i discepoli. "Altri dicono che sei Elia o qualche altro profeta ritornato in vita"
+36-38 “A che serve guadagnare il mondo intero e poi perdere la propria
+vita? Con che cosa potete ricomprarla? Chiunque si vergogna di me e del
+mio messaggio davanti a questa società senza Dio e piena di colpe,
+sappia che anch’io, il [Prescelto di
+Dio](../master/glossario.txt "glossario: Cristo"), mi vergognerò di lui
+quando sarò nello splendore di mio Padre circondato dalla sua corte[^7].
 
-29 Poi Gesù chiese: "E secondo voi, chi sono io?" Pietro rispose "Tu sei il Prescelto di Dio [1]" 30 Allora Gesù ordinò a loro assolutamente di non dirlo a nessuno.
+[^6]: Geremia 5:21
 
-31 Poi cominciò a raccontare a loro tuttto quello che avrebbe subìto: il senato dei religiosi, i capi sacerdoti e i professori di Mosè l'avrebbero respinto, sarebbe stato ucciso e poi resuscitato tre giorni dopo.
-
-32 Siccome parlava con loro di queste cose molto apertamente, Pietro lo prese in disparte e cominciò a rimproverarlo.
-
-33 Allora Gesù si girò a guardare gli allievi e poi severamente disse a Pietro: "Stai lontano da me Satana! Tu non capisci le cose di Dio, solo le cose degli uomini".
-
-34 Poi chiamo vicino a sé gli allievi e la folla e cominciò a spiegare: "Chi vuole seguirmi deve smettere di pensare a se stesso: prenda la sua croce e mi segua. Chi vuole salvare la sua vita la perderà; chi invece è pronto a sacrificarla per me e per amore del mio messaggio la salverà.
-
-36-38 "A cosa serve guadagnare tutto il mondo ma poi perdere la propria anima? Conoscete qualcosa che vale abbastanza per ricomprarla? 38 Chiunque si vergogna di me e del mio messaggio davanti a questa società senza Dio e piena di sbagli, sappia che anch'io, il Prescelto di Dio[2], mi vergognerò di lui quando sarò nello splendore di mio Padre circondato dalla sua corte[3].
-
-[<<]][[/Mc07|<]] [[/Mc09|>](/Mc01 "wikilink") [&gt;&gt;](/Lc01 "wikilink")
-
-Note
-----
-
-<references>
-</references>
-[Category: Marco](/Category:_Marco "wikilink")
-
-[1] [Cristo](/G/Cristo "wikilink")
-
-[2] [Messia](/G/Messia "wikilink")
-
-[3] angeli
+[^7]: letteralmente
+    [angeli](../master/glossario.txt "glossario: angeli") consacrati a
+    Dio.
