marco12 da penflip

--- a/pages/Mc12.md
+++ b/pages/Mc12.md
@@ -3,86 +3,135 @@ layout: page
 title: Mc12
 ---
 
-[<<]][[/Mc11|<]] [[/Mc13|>](/Mc01 "wikilink") [&gt;&gt;](/Lc01 "wikilink")
-
 Il vigneto in affitto
 ---------------------
 
-1 Gesù cominciò a raccontare delle storie ai presenti: "Un signore piantò un vigneto, lo chiuse con una siepe, scavò una buca per schiacciare l'uva e costruì una torretta per il guardiano, poi affittò il vigneto a dei contadini e partì per un paese lontano. Al tempo della vendemmia mandò uno dei suoi uomini a ritirare la sua parte del raccolto, ma i contadini presero l'inviato, lo picchiarono e lo mandarono indietro a mani vuote.
+1-3 Gesù cominciò a raccontare delle storie ai presenti: “Un signore
+piantò un vigneto, lo chiuse con una siepe, scavò una buca per
+schiacciare l’uva e costruì una torretta per il guardiano, poi affittò
+il vigneto a dei contadini e partì per un paese lontano. Al tempo della
+vendemmia mandò uno dei suoi uomini a ritirare la sua parte del
+raccolto, ma i contadini presero l’inviato, lo picchiarono e lo
+mandarono indietro a mani vuote.
 
-4 Il padrone allora mandò un'altro dei suoi dipendenti che subì lo stesso trattamento, anzi peggio, perché fu ferito alla testa e insultato. Ne mandò ancora un'altro e i contadini lo uccisero. Altri ancora furono picchiati e uccisi, finché a quel signore rimase soltanto il suo unico figlio, che amava tanto. Lo mandò per ultimo, pensando che almeno per lui avrebbero avuto rispetto.
+4-6 Il padrone allora mandò un’altro dei suoi dipendenti che subì lo
+stesso trattamento, anzi peggio, perché fu ferito alla testa e
+insultato. Ne mandò ancora un’altro e i contadini lo uccisero. Altri
+ancora furono picchiati e uccisi, finché a quel signore rimase soltanto
+il suo unico figlio, che amava tanto. Lo mandò per ultimo, pensando che
+almeno per lui avrebbero avuto rispetto.
 
-7 Ma quando i contadini lo videro arrivare, si dissero: "Questo diventerà padrone del vigneto quando morirà suo padre. Forza, ammazziamolo, e prendiamci la sua eredità!" Così lo presero, l'ammazzarono e buttarono il corpo fuori dal vigneto.
+7-8 Ma quando i contadini lo videro arrivare, si dissero: “Questo
+diventerà padrone del vigneto quando morirà suo padre. Forza!
+Ammazziamolo e prendiamoci la sua eredità!” Così lo presero,
+l’ammazzarono e buttarono il corpo fuori dal vigneto.
 
-9 Secondo voi, cosa farà il padrone del vigneto? Sicuramente verrà ad ucciderli tutti e darà il vigneto a qualcun'altro. 10 Non avete letto nella Bibbia: "La pietra che i costruttori hanno scartato è diventata la pietra angolare. Questa è opera del Grande Architetto, una meraviglia da contemplare!" [1]
+9-11 Secondo voi, cosa farà il padrone del vigneto? Sicuramente verrà ad
+ucciderli tutti e darà il vigneto a qualcun’altro. Non avete letto nella
+Bibbia: “La pietra che i costruttori hanno scartato è diventata la
+pietra angolare. Questa è opera del Grande Architetto, una meraviglia da
+contemplare!” [^14]
 
-12 I capi ebrei volevano subito arrestarlo, perché avevano capito benissimo che erano loro i contadini malvagi del racconto, ma non osavano toccarlo per paura della folla. Perciò lo lasciarono e se ne andarono, mandando però altri capi religiosi e politici a parlare con Gesù, sperando di fargli dire qualcosa di compromettente.
+12-13 I capi ebrei volevano subito arrestarlo, perché avevano capito
+benissimo che il racconto parlava di loro, ma non osavano toccarlo per
+paura della folla. Perciò lo lasciarono e se ne andarono, mandando però
+altri capi religiosi e politici a parlare con Gesù, sperando di fargli
+dire qualcosa di compromettente.
 
 Le tasse
 --------
 
-14 "Professore" dissero questi, "Sappiamo che tu dici la verità a qualsiasi costo, senza lasciarti influenzare da quello che pensa la gente, e non guardi in faccia a nessuno, ma insegni sinceramente le vie di Dio. Vorremmo sapere, quindi: è giusto, o no, pagare le tasse all'imperatore di Roma?"
-
-15 Gesù sapeva quanto erano falsi e disse: "Chi volete ingannare? Fatemi vedere una moneta!" Quando gliela portarono, Gesù chiese: "Di chi è questa faccia e questo nome?" "Di Cesare [2], l'imperatore" risposero. E Gesù: "Date a Cesare quello che è di Cesare, e date a Dio quello che è di Dio!". Davanti a questa risposta rimasero a bocca aperta.
+14-17 “Professore” dissero questi, “Sappiamo che lei è sincero e
+trasparente, non cerca favori e non guarda in faccia a nessuno, ma
+insegna la verità delle vie di Dio. Vorremmo sapere, quindi: è giusto, o
+no, pagare le tasse all’imperatore di Roma?” Gesù sapeva quanto erano
+falsi e disse: “Chi volete ingannare? Fatemi vedere una moneta!” Quando
+gliela portarono, Gesù chiese: “Di chi è questa faccia e questo nome?”
+“Di Cesare [^15], l’imperatore” risposero. E Gesù: “Date a Cesare quello
+che è di Cesare, e date a Dio quello che è di Dio!”. Davanti a questa
+risposta rimasero a bocca aperta.
 
 La vita dopo la morte
 ---------------------
 
-18 Poi si presentarono a Gesù alcuni Sadducei, un gruppo religioso che non credeva che i morti torneranno in vita[3]. Anche loro fecero una domanda: "Capo, Mosè ci ha dato delle regole secodo le quali, se un uomo sposato muore senza figli, il fratello del morto deve sposare la vedova per darle dei figli al posto del defunto. 20 Una volta, c'erano sette fratelli: il primo si sposò, e morì senza figli; il secondo fratello sposò la vedova, ma morì anche lui senza figli. Allora la sposò il terzo, e anche lui morì senza figli, e così via: tutti e sette i fratelli sposarono quella signora e tutti morirono senza avere figli. Alla fine, per ultimo, morì anche la signora.
+18-23 Poi si presentarono a Gesù alcuni Sadducei, un gruppo religioso
+che non credeva che i morti torneranno in vita[^16]. Anche loro fecero
+una domanda: “Professore, Mosè ci ha dato questa regola: se un uomo
+sposato muore senza figli, il fratello del morto deve sposare la vedova
+per darle dei figli al posto del defunto. Una volta, c’erano sette
+fratelli: il primo si sposò, e morì senza figli; il secondo fratello
+sposò la vedova, ma morì anche lui senza figli. Allora la sposò il
+terzo, e anche lui morì senza figli, e così via: tutti e sette i
+fratelli sposarono quella signora e tutti morirono senza avere figli.
+Alla fine, per ultimo, morì anche la signora.”Noi vorremmo sapere
+questo: quando i morti tornano in vita, di chi sarà moglie quella
+signora, visto che è stata moglie di tutti e sette?
 
-23 "Noi vorremmo sapere questo: quando i morti tornano in vita, di chi sarà moglie quella signora, visto che è stata moglie di tutti e sette?
-
-24 Gesù rispose: "Voi sbagliate, perchè non conoscete la Bibbia e neanche la grandezza di Dio. Infatti quando i morti risorgeranno, non ci sarà più il matrimonio, ma saranno tutti come gli angeli del cielo.
-
-26 "Per quanto riguarda la realtà del ritorno in vita, avete mai letto nel libro dell'Esodo, la storia di Mosè e del cespuglio che bruciava? [4] Dio, allora disse a Mosè: "IO SONO DIO di Abramo, DIO di Isacco e DIO di Giacobbe"
-
-27 Questo non è Dio dei morti, ma dei vivi. Voi vi state sbagliando di grosso!
+24-27 Gesù rispose: “Voi sbagliate, perchè non conoscete la Bibbia e
+neanche la grandezza di Dio. Infatti quando i morti risorgeranno, non ci
+sarà più il matrimonio, ma saranno tutti come gli
+[angeli](../master/glossario.txt "glossario: angelo") del cielo.”Per
+quanto riguarda la realtà del ritorno in vita, avete mai letto nel libro
+dell’Esodo, la storia di Mosè e del cespuglio che bruciava? [^17] In
+quell’occasione Dio disse a Mosè: “IO SONO DIO di Abramo, DIO di Isacco
+e DIO di Giacobbe.” Questo non è Dio dei morti, ma dei vivi. Voi state
+sbagliando di grosso!
 
 La prima regola
 ---------------
 
-28 Uno dei professori di Mosè che era lì e aveva seguito la discussione, capì che Gesù aveva risposto bene ai Sadducei, e gli si avvicinò per chiedere: "Di tutte le regole [5] di Mosè, qual'è la più importante?"
+28-31 Uno dei professori di Mosè che era lì e aveva seguito la
+discussione capì che Gesù aveva risposto bene ai Sadducei, e gli si
+avvicinò per chiedere: “Di tutte le [regole di
+Mosè](../master/glossario.txt "glossario: legge di Mosé"), qual’è la più
+importante?” Gesù rispose: “Quella che dice: *“Ascolta, Israele, il Capo
+Supremo, nostro Dio, è l’unico Capo. Amalo con tutto il cuore, con tutta
+la tua testa e le tue forze!”*[^18]. La seconda è: *“Ama chi ti è vicino
+come te stesso”*[\^d]. Non ci sono regole più importanti di queste due.”
 
-29 Gesù rispose: "Quella che dice: "Ascolta, Israele, il Capo Supremo, nostro Dio è l'unico Capo. Amalo con tutto il cuore, con tutta la tua testa e le tue forze!".
+32-34 Il professore di Mosè rispose: “Collega, hai detto proprio la
+verità: c’e solo un Dio e uno solo! È molto più importante amarlo con
+tutto il cuore, con tutta la testa, con tutta l’anima e tutte le forze e
+amare gli altri come se stessi piuttosto che sacrificare qualunque
+[offerta rituale](../master/glossario.txt "glossario: sacrificio")
+sull’altare. Gesù, apprezzando la risposta saggia, gli disse:”Tu non sei
+lontano dal governo di Dio“. E dopo questo, nessuno trovò più il
+coraggio di fargli altre domande.
 
-31 La seconda è: "Ama chi ti sta vicino come te stesso". Non ci sono regole più importanti di queste due."
-
-32 Il professore di Mosè rispose: "Collega, hai detto proprio la verità: c'e solo un Dio e uno solo! È molto più importante amarlo con tutto il cuore, con tutta la testa, con tutta l'anima e tutte le forze e amare gli altri come se stessi piuttosto che sacrificare ogni tipo di offerta rituale[6] sull'altare.
-
-34 Gesù, apprezzando la risposta saggia, gli disse: "Tu non sei lontano dal governo di Dio". E dopo questo, nessuno ebbe più il coraggio di fargli altre domande.
-
-35 Più tardi, mentre stava insegnando nel Tempio, Gesù fece questa domanda: "I vostri professori di Mosè dicono che il Prescelto di Dio[7] deve essere discendente del re Davide. Come è possibile? Davide stesso, guidato da Dio Spirito [8], ha detto: "Dio disse al mio Capo: "Siediti alla mia destra, finché non ti avrò schiacciato tutti i tuoi nemici". Se Davide lo chiamava Capo, come può essere anche suo discendente?" E una folla immensa lo ascoltava affascinata.
+35-37 Più tardi, mentre stava insegnando nel Tempio, Gesù aprì un
+dibattito: “I vostri professori dicono che il [Prescelto di
+Dio](../master/glossario.txt "glossario: Messia") deve essere
+discendente del re Davide. Come è possibile? Davide stesso, guidato da
+[Dio Spirito](../master/glossario.txt "glossario: Spirito Santo"), ha
+scritto: \_”Dio disse al mio Capo: “Siediti alla mia destra, finché non
+ti avrò schiacciato tutti i tuoi nemici”\ _. Se Davide lo chiamava Capo,
+come può essere anche suo discendente?" E una folla immensa lo ascoltava
+affascinata.
 
 La piccola grande offerta
 -------------------------
 
-38 Gesù insegnava anche: "Non fidatevi dei professori di Mosè a cui piace girare vestiti da religiosi di cultura, e godono quando la gente li saluta, quando passeggiano in pubblico. Vogliono sedersi nei primi posti nei luoghi di culto e al posto d'onore nelle feste, ma poi scacciano le vedove dalle loro case, e nascondono il loro carattere, facendo finta di essere religiosi e recitando lunghe preghiere in pubblico. Ma per come si comportano, avranno una punizione peggiore degli altri!".
+38-40 Gesù insegnava anche: “Non fidatevi dei professori di Mosè a cui
+piace girare vestiti da religiosi di cultura, e si gonfiano quando la
+gente li saluta in passeggiata. Vogliono sedersi nei primi posti nelle
+chiese e al posto d’onore nelle feste, ma poi cacciano le vedove dalle
+loro case, e si fanno belli recitando lunghe preghiere in pubblico.
+Vedrete come Dio li ricompenserà!”.
 
-41 Poi Gesù si mise a sedere, vicino alla cassetta delle offerte nel Tempio, a guardare come la gente lasciava le monete, e si accorse che molti ricchi offrivano grosse somme.
+41-43 Poi Gesù si sedette vicino alla cassetta delle offerte nel Tempio,
+osservando quelli che lasciavano le monete, e si accorse che molti
+ricchi offrivano grosse somme. Venne anche una povera donna che lasciò
+cadere nella cassetta solo due monetine. Gesù chiamò gli allievi e
+commentò: “Quella povera vedova ha dato di più di tutti gli altri,
+perché gli altri hanno lasciato gli avanzi, ma lei ha offerto tutto
+quello che le serviva per vivere.”
 
-42 Venne anche una povera donna che lasciò cadere nella cassetta solo due monetine. 43 Gesù chiamò i discepoli e commentò: "Quella povera vedova ha dato di più di tutti gli altri, perché gli altri hanno lasciato gli avanzi, ma lei ha offerto tutto quello che le serviva per vivere.
+[^14]: Salmi 118:22-23
 
-[<<]][[/Mc11|<]] [[/Mc13|>](/Mc01 "wikilink") [&gt;&gt;](/Lc01 "wikilink")
+[^15]: “[Cesare]” era un modo per indicare l’imperatore
 
-Note
-----
+[^16]: [Risurrezione] glossario
 
-<references>
-</references>
-[Category: Marco](/Category:_Marco "wikilink")
+[^17]: Esodo 3:6
 
-[1] [Sal118](/Sal118 "wikilink")
-
-[2] [Cesare](/G/Cesare "wikilink")
-
-[3] [Resurrezione](/G/Resurrezione "wikilink")
-
-[4] Esodo 3:6
-
-[5] [Comandamento](/G/Comandamento "wikilink")
-
-[6] [Sacrificio](/G/Sacrificio "wikilink")
-
-[7] [Messia](/G/Messia "wikilink")
-
-[8] [Spirito Santo](/G/Spirito_Santo "wikilink")
+[^18]: Deut 5:16-20, Es 20:12-16
