--- a/pages/Mc12.md
+++ b/pages/Mc12.md
@@ -103,8 +103,8 @@ dibattito: “I vostri professori dicono che il [Prescelto di
 Dio](../master/glossario.txt "glossario: Messia") deve essere
 discendente del re Davide. Come è possibile? Davide stesso, guidato da
 [Dio Spirito](../master/glossario.txt "glossario: Spirito Santo"), ha
-scritto: \_”Dio disse al mio Capo: “Siediti alla mia destra, finché non
-ti avrò schiacciato tutti i tuoi nemici”\ _. Se Davide lo chiamava Capo,
+scritto: *”Dio disse al mio Capo: “Siediti alla mia destra, finché non
+ti avrò schiacciato tutti i tuoi nemici”*. Se Davide lo chiamava Capo,
 come può essere anche suo discendente?" E una folla immensa lo ascoltava
 affascinata.
 
