--- a/pages/Mc13.md
+++ b/pages/Mc13.md
@@ -27,11 +27,9 @@ sofferenza.
 
 9-11 Fate attenzione, perché sarete trascinati in tribunale e picchiati
 nei luoghi di culto. Sarete accusati, per colpa mia, davanti a re e capi
-di governo, e così sarete miei testimoni.\
-Ma, prima di tutto questo, [il mio
+di governo, e così sarete miei testimoni. Ma, prima di tutto questo, [il mio
 messaggio](../master/glossario.txt "glossario: vangelo") deve essere
-annunciato in tutte le nazioni.\
-E quando vi arresteranno per portarvi in tribunale, non preoccupatevi di
+annunciato in tutte le nazioni. E quando vi arresteranno per portarvi in tribunale, non preoccupatevi di
 preparavi il discorso: dite solo quello che Dio vi suggerirà in quel
 momento, perché non sarete voi a parlare, ma Spirito di Dio.
 
