prove di compilazione Jekyll

--- a/pages/Mc14.md
+++ b/pages/Mc14.md
@@ -143,9 +143,9 @@ morte, ma non ne trovavano. Molti testimoni portavano false
 testimonianze, ma si contraddicevano a vicenda.
 
 57-58 Alla fine, si alzarono alcuni signori, cercando di accusare
-falsamente Gesù. Dissero: “Abbiamo sentito che diceva”Distruggerò questo
+falsamente Gesù. Dissero: “Abbiamo sentito che diceva: Distruggerò questo
 Tempio costruito dagli uomini e in tre giorni ne costruirò un altro,
-fatto senza intervento umano.“” Ma neanche su questo punto erano
+fatto senza intervento umano.” Ma neanche su questo punto erano
 d’accordo.
 
 60-62 Allora il Sacerdote Capo si alzò e, davanti al tribunale, chiese a
@@ -169,7 +169,7 @@ Pietro disconosce Gesù
 66-68 Nel frattempo, Pietro era rimasto sotto, nel cortile. Una delle
 serve del Sacerdote Capo, arrivò e lo vide scaldarsi vicino al fuoco; lo
 osservò e disse: “Anche tu eri con Gesù di [Nazarèt][]! Pietro negò:”Non
-so neanche cosa stai dicendo!" disse, allontanandosi verso il cortile.
+so neanche cosa stai dicendo!” disse, allontanandosi verso il cortile.
 (In quel momento il gallo cantò.)
 
 69-71 Guardandolo, la serva cominciò a ripetere agli altri: “Quello lì è
@@ -195,7 +195,7 @@ tre volte che non mi conosci”. E Pietro, ripensandoci, pianse.
     regole della Pasqua ebraica
 
 [^24]: vedi Zac 13:7
-[Sacerdote Capo]: ../master/glossario.txt “glossario: Sacerdote Capo”
-[Liberatore degli Ebrei]: ../master/glossario.txt “glossario: Messia”
-[Nazarèt]: ../master/mappa.txt “mappa: Nazarèt”
-[Galilea]: ../master/mappa.txt “mappa: Galilea”
+[Sacerdote Capo]: ../master/glossario.txt "glossario: Sacerdote Capo"
+[Liberatore degli Ebrei]: ../master/glossario.txt "glossario: Messia"
+[Nazarèt]: ../master/mappa.txt "mappa: Nazarèt"
+[Galilea]: ../master/mappa.txt "mappa: Galilea"
