--- a/pages/Mc16.md
+++ b/pages/Mc16.md
@@ -3,39 +3,69 @@ layout: page
 title: Mc16
 ---
 
-[<<]][[/Mc15|<]] [[/Mc16|>](/Mc01 "wikilink") [&gt;&gt;](/Lc01 "wikilink")
-
 É vivo!
 -------
 
-1-2 Al tramonto [1], quando la festa era finita, Maria Maddalena, Salome e Maria madre di Giacomo, andarono a comprare dei prodotti per imbalsamare il cadavere di Gesù, e all'alba della domenica mattina, molto presto, andarono alla tomba.
+1-2 Finita la festa, Maria Maddalena, Salomé e Maria madre di Giacomo
+andarono a comprare dei prodotti per profumare[^27] il cadavere di Gesù,
+e all’alba della domenica mattina, molto presto, andarono alla tomba.
 
-3 Strada facendo, si chiedevano se avrebbero trovato qualcuno per spostare la grossa pietra dall'ingresso della tomba.
+3-5 Strada facendo, si chiedevano se avrebbero trovato qualcuno per
+spostare la grossa pietra dall’ingresso della tomba. Ma quando andarono
+a controllare, trovarono che quella roccia enorme era già stata
+spostata. Perciò entrarono nella tomba e videro un giovane vestito di
+bianco seduto sulla destra.
 
-4 Ma quando andarono a controllare, trovarono che quella roccia enorme era già stata spostata. Perciò entrarono nella tomba e videro un giovane vestito di bianco seduto sulla destra.
+6-7 Le donne si spaventarono ma lui (l’angelo) disse: “Non stupitevi.
+State cercando Gesù di Nazarèt, quello che hanno crocifisso? Non è qui:
+è stato risuscitato! Questo è il posto dove avevano messo il suo
+cadavere. Ora andate e portate questo messaggio ai suoi allievi e a
+Pietro:”Gesù è andato avanti in Galilea: là vi incontrerete proprio come
+aveva predetto“.
 
-6 Le donne si spaventarono ma lui (l'angelo) disse: "Non stupitevi. State cercando Gesù di Nazaret, quello che hanno crocifisso? Non è qui: è stato risuscitato! Questo è il posto dove avevano messo il suo cadavere.
+8 Le donne si allontanarono di corsa dalla tomba tremando e troppo
+spaventate per parlare.
 
-7 Ora andate a portare questo messaggio ai suoi allievi e a Pietro: "Gesù è andato avanti in Galilea: là vi incontrerete proprio come aveva predetto".
+Gli ultimi giorni di Gesù sulla terra
+-------------------------------------
+[^28]
 
-8 Le donne si allontanarono di corsa dalla tomba tremando e troppo spaventate per parlare.
+9-11 Era domenica mattina presto, quando Gesù tornò in vita, e la prima
+persona che lo vide fu Maria Maddalena, da cui aveva cacciato sette
+spiriti del male. Lei corse dagli allievi e li trovò tristi e con gli
+occhi pieni di lacrime: subito raccontò di aver visto Gesù. Era vivo! Ma
+nessuno le credeva.
 
-Epilogo di Marco
-----------------
+12-13 Poi Gesù apparve con un altro aspetto a due di loro, mentre
+camminavano verso la campagna. Questi tornarono a raccontarlo agli
+altri, che però non credettero neanche a loro.
 
-[2] 9 Era domenica mattina presto, quando Gesù tornò in vita, e la prima persona da cui si fece vedere fu [Maria Maddalena](/P/Maria_Maddalena "wikilink"), da cui aveva cacciato sette spiriti del male.
+14 Più tardi Gesù si presentò agli Undici[^29], mentre mangiavano. Li
+sgridò per la loro mancanza di fiducia, e per essersi rifiutati più
+volte di credere a quelli che l’avevano visto dopo che era tornato in
+vita.
 
-10 Lei corse dagli allievi e li trovò tristi e con gli occhi pieni di lacrime: subito raccontò di aver visto Gesù. Era vivo! Ma nessuno gli credeva.
+15-18 Disse: “Andate in tutto il mondo, per annunciare a tutti il mio
+[messaggio][]. Chiunque accoglie il messaggio e fa il lavaggio rituale,
+sarà salvo, e chiunque lo rifiuta verrà condannato. Quelli che si
+affidano a Dio si riconosceranno da queste cose: a nome mio cacceranno
+demòni; parleranno lingue nuove, potranno raccogliere serpenti a mani
+nude, bere veleni senza morire, benediranno i malati appoggiandogli le
+mani e quelli guariranno.”
 
-[<<]][[/Mc15|<]] [[/Mc16|>](/Mc01 "wikilink") [&gt;&gt;](/Lc01 "wikilink")
+19-20 Quando Gesù finì di parlare con loro, fu trasportato in cielo, e
+andò a sedersi alla destra di Dio. Poi gli allievi partirono e
+predicarono dappertutto, e Dio li aiutò nella loro missione, confermando
+il suo messaggio con le manifestazioni che accompagnavano l’annuncio.
 
-Note
-----
+[^27]: gli ebrei dell’epoca non imbalsamavano, ma coprivano con profumi
+    l’odore della decomposizione dei loro cari
 
-<references>
-</references>
-[Category: Marco](/Category:_Marco "wikilink")
+[^28]: questa sezione (vv.9-20) manca nelle versioni più antiche
 
-[1] la giornata ebraica inizia e finisce al tramonto
+[^29]: Giuda, il traditore, aveva lasciato i dodici allievi scelti, che
+    erano rimasti in undici
+	
+[messaggio]: ../master/glossario.txt “glossario: vangelo”
 
 [2] questa sezione manca nelle versioni più antiche
