--- a/pages/Mc15.md
+++ b/pages/Mc15.md
@@ -11,8 +11,7 @@ Bibbia e la Corte Suprema al completo si riunirono per discutere cosa
 fare. Alla fine, fecero legare Gesù e lo portarono da Pilato (il
 governatore romano).
 
-2 Pilato chiese a Gesù: “Sei tu il Re degli Ebrei?” “L’hai detto tu”,
-rispose Gesù.
+2 Pilato chiese a Gesù: “Sei tu il Re degli Ebrei?” “L’hai detto tu”, rispose Gesù.
 
 3-5 Siccome i capi dei sacerdoti lo accusavano di molti crimini, Pilato
 gli chiese ancora: “Perchè non dici niente? Senti tutte le accuse che ti
@@ -98,8 +97,7 @@ La sepoltura
 ------------
 
 42-43 Ormai era tardo pomeriggio della vigilia della festa, quando si
-finivano i preparativi.\
-Giuseppe di Arimatèa, onorato membro del Tribunale Ebraico che aspettava
+finivano i preparativi. Giuseppe di Arimatèa, onorato membro del Tribunale Ebraico che aspettava
 fiducioso il governo di Dio, si fece coraggio e andò da Pilato a
 chiedere il cadavere di Gesù.
 
@@ -116,13 +114,10 @@ all’apertura.
 veniva deposto il cadavere di Gesù.
 
 
-[^24]: il v.28: *Si realizzava così la profezia che diceva “Lui fu
-    catalogato fra i malviventi”.* è presente in alcune versioni, ma non
-    è presente nelle versioni più autorevoli.
+[^24]: il v.28: *Si realizzava così la profezia che diceva “Lui fu catalogato fra i malviventi”.* 
+è presente in alcune versioni, ma non nelle versioni più autorevoli.
 
 [^25]: citazione da Salmo 22:1
 
 [^26]: la morte per crocefissione (in genere per asfissia) doveva essere
     lenta e poteva arrivare anche dopo un giorno di agonia.
-
-[4] crocefissione, la morte era solitamente per asfissia, quando cedevano le gambe della vittima
